Fixing messaging for fall league

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -17,27 +17,24 @@ block content
                 span=err
         br
         br
-        p Greetings beach ultimate lovers!
-
-        p South Florida Ultimate is happy to announce a series of beach ultimate hat tournaments coming in 2020!
+        h1=league.title + " Sign Up" 
 
         h3 Description
-        p The series consists of two beach ultimate Frisbee hat tournaments held on the following dates, each one starting at 10am sharp.
+        p This fall we'll be back at Amelia Earhart Park, nearby where Le Jeune Road meets State Road 924.
+        iframe(src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14358.205887616712!2d-80.2784486!3d25.8842357!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5fd60d3c7189a581!2sAmelia+Earhart+Park!5e0!3m2!1sen!2sus!4v1475028057840" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen)
 
+        p Regular season games will be <strong>Wednesday evenings at 8pm, starting October 6th</strong>. 
+        p We're planning on 8 weeks of play on Wednesdays, skipping the Wednesday of Thanksgiving week and ending on Wednesday, December 1st. <strong>Finals are planned for December 12th, and will be</strong> at Amelia Earhart Park.
+
+        p Registration is open <strong>as of September 28th and ends October 3rd</strong> and the costs are:
         ul
-            li Saturday, January 11th, 2020
-            li Saturday, February 1st, 2020
+            li $30 for students
+            li $50 for everyone else
+        p The fee that we all pay for are for the access to the lit fields during regular season and playoffs as well as a basic insurance.
+        
+        .alert.alert-info Late registration (at a $65 fee for everyone, as space permits) will continue until after the first week of play.
 
-        p Register as an individual or as a pair. We'll make even teams and play a round robin!  The format will be 3:1 or 2:2 depending on attendance.
-        p Each event cost $20 per player. You can sign for each one individually or both for a discounted $30.
-        p Post game tournament party is across the street at Park and Ocean!
-
-        h3 Location
-        p Games will be held the beach across from Hugh Taylor Birch State Park, 3109 E Sunrise Blvd. Ft Lauderdale, FL.
-        p There is all day parking available in the park for $6 per vehicle.
-
-        iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2595.3871114681165!2d-80.10347306511046!3d26.14049539386033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6f9406a6e78e90c1!2sPark+%26+Ocean!5e1!3m2!1sen!2sus!4v1508698698564" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen)
-
+        hr
 
         h3 Registration
 
@@ -83,19 +80,6 @@ block content
             .form-group
                 label Comments
                 textarea(name="comments").form-control
-
-
-            .form-group#registration_dates
-                label Registration Dates
-
-                .checkbox
-                    label
-                        input(type="checkbox" name="registration_dates" value="2020-01-11")
-                        | Saturday, January 11th, 2020
-                .checkbox
-                    label
-                        input(type="checkbox" name="registration_dates" value="2020-02-01")
-                        | Saturday, February 1st, 2020
 
             h3 Waiver
 
