Small changes to registration form

--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -20,7 +20,7 @@ block content
         h1=league.title + " Sign Up" 
 
         h3 Description
-        p This fall we'll be back at Amelia Earhart Park, nearby where Le Jeune Road meets State Road 924.
+        p We are excited to announce that ultimate is back at Amelia Earhart Park for South Florida Ultimate fall league!
         iframe(src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14358.205887616712!2d-80.2784486!3d25.8842357!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5fd60d3c7189a581!2sAmelia+Earhart+Park!5e0!3m2!1sen!2sus!4v1475028057840" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen)
 
         p Regular season games will be <strong>Wednesday evenings at 8pm, starting October 6th</strong>. 
@@ -30,7 +30,7 @@ block content
         ul
             li $30 for students
             li $50 for everyone else
-        p The fee that we all pay for are for the access to the lit fields during regular season and playoffs as well as a basic insurance.
+        p Player fees will be put toward fields, lights, insurance, and jerseys for the league.
         
         .alert.alert-info Late registration (at a $65 fee for everyone, as space permits) will continue until after the first week of play.
 
@@ -104,7 +104,7 @@ block content
             .form-group
                 label(for='partnerName') Partner Name
                 input#partnerName.input-lg.form-control(type='text' name='partnerName' placeholder='')
-                p.help-block Type the name of the person you would like to partner with
+                p.help-block Type the name of the person you would like to partner with.  The captains during the draft will make every effort to accommodate this request, but we can't guarantee this.
 
 
             .form-group
