launching league sign up

--- a/templates/views/confirmation.jade
+++ b/templates/views/confirmation.jade
@@ -8,7 +8,9 @@ block content
   .container: .jumbotron(style="margin-top: 1em")
     h1 Thank you!
     p We've successfully received your payment!
-    p Feel free to share the joy of having signed up to play beach ultimate!
+    p 
+      span Feel free to share the joy of having signed up to play 
+      strong=league.title
     div#share.text-center
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
