--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -19,10 +19,10 @@ block content
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p We're starting to organize our grass fall league, registration should be opening in the coming week
+          p Our fall league registration is now open!
       .row
         .col-md-12.text-center
-          a.btn.btn-lg.btn-primary(href="https://www.facebook.com/events/972376260276382" target="_blank") Learn More
+          a.btn.btn-lg.btn-primary(href="/register") Register Now
 
   .features
     .container
@@ -73,6 +73,31 @@ block content
       for image in hallOfFameImages
         figure(style='background-image: url(/images/#{image});')
 
+
+    // Messenger Chat Plugin Code
+    #fb-root
+
+    // Your Chat Plugin code
+    #fb-customer-chat.fb-customerchat
+
 block js
   script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js")
   script(src="/js/schedule.js")
+  script.
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "353781541319975");
+      chatbox.setAttribute("attribution", "biz_inbox");
+      window.fbAsyncInit = function () {
+        FB.init({
+          xfbml: true,
+          version: 'v12.0'
+        });
+      };
+      (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
