--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -60,6 +60,7 @@ block content
                 select#gender.input-lg.form-control(name="gender")
                     option(value='Female') Female
                     option(value='Male') Male
+                    option(value='Other') Other / I'd Prefer Not To
                 p.help-block We use this information to draft teams that have even gender distributions
 
             .form-group
