--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -124,6 +124,12 @@ html(lang='en')
         .container Site built by <a href="http://danielprada.co" target="_blank">Daniel Prada</a>
 
 
+      // Messenger Chat Plugin Code
+      #fb-root
+
+      // Your Chat Plugin code
+      #fb-customer-chat.fb-customerchat
+            
     //- JAVASCRIPT
 
     //- jQuery 1.11.3 is included by default, and required by both Bootstrap
@@ -163,3 +169,23 @@ html(lang='en')
 
     //- Include template-specific javascript files by extending the js block
     block js
+
+    script.
+          var chatbox = document.getElementById('fb-customer-chat');
+          chatbox.setAttribute("page_id", "353781541319975");
+          chatbox.setAttribute("attribution", "biz_inbox");
+          window.fbAsyncInit = function () {
+            FB.init({
+              xfbml: true,
+              version: 'v12.0'
+            });
+          };
+          (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));
+    
