--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -1,10 +1,10 @@
 extends ../layouts/default
 
 block head
-    meta(property="og:title" content="Register now for the SFL Ultimate Beach Series!")
+    meta(property="og:title" content="Register now for the SFL Ultimate " + locals.league.title)
     meta(property="og:url" content="https://www.sflultimate.com/register")
-    meta(property="og:description" content="Sign up for the upcoming three beach hatters on Sat. Jan. 11th & Sat. February 1st")
-    meta(property="og:image" content="https://www.sflultimate.com/images/beach-ultimate-series-logo.jpg")
+    meta(property="og:description" content="Sign up by October 5th for this grass fall league starting back on October 6th")
+    meta(property="og:image" content="https://www.sflultimate.com/images/open-graph/registration.jpg")
     script(src="https://www.google.com/recaptcha/api.js?render=6Ld6rNQUAAAAAAthlbLL1eCF9NGKfP8-mQOHu89w")
 block content
 
