--- a/templates/views/register.jade
+++ b/templates/views/register.jade
@@ -26,7 +26,7 @@ block content
         p Regular season games will be <strong>Wednesday evenings at 8pm, starting October 6th</strong>. 
         p We're planning on 8 weeks of play on Wednesdays, skipping the Wednesday of Thanksgiving week and ending on Wednesday, December 1st. <strong>Finals are planned for December 12th, and will be</strong> at Amelia Earhart Park.
 
-        p Registration is open <strong>as of September 28th and ends October 3rd</strong> and the costs are:
+        p Registration is open <strong>as of September 28th and ends October 5th at midnight EST</strong> and the costs are:
         ul
             li $30 for students
             li $50 for everyone else
