--- a/templates/views/draftboard.jade
+++ b/templates/views/draftboard.jade
@@ -39,6 +39,12 @@ block content
                         td {{player.partnerName}}
                         td {{player.comments}}
                         td {{player.wouldCaptain ? 'Yes': ''}}
+                        
+            h3 Breakdowns
+            div(ng-repeat="table in keysForTotals")
+                h4 {{table}} 
+                ul
+                    li(ng-repeat="(key, entry) in totals[table]") <strong>{{key}}</strong>: {{entry}}
 
 block js
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js')
