Prepared unregistered email

--- a/templates/emails/email-template.html
+++ b/templates/emails/email-template.html
@@ -1,97 +1,52 @@
 <!-- Special Message & Beach Tourney Tomorrow: PLEASE READ & Share -->
 <!--file:///Users/dprada/GitHub/sflultimate/templates/emails/email-template.html -->
 <div>
-  <img src="https://www.sflultimate.com/images/south-florida-2020-final-optimized.png" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
+    <div style="background-color: black; padding-top: 20px;">
+        <img src="https://www.sflultimate.com/images/logo-skyline.png" alt="" style="max-width: 300px; height: auto; display: block; margin: 0 auto;">
+    </div>
 
-  <div style="margin-top: 12px; background-color: #16aae6; border-top: 8px solid #0e6c92; border-bottom: 8px solid #0e6c92; height: 50px;">
-  </div>
+    <div style="background-color: #afafaf; border-top: 8px solid #dcdbdb; border-bottom: 8px solid #dcdbdb; height: 10px;">
+    </div>
 
-  <div style="padding: 1em;">
+    <div style="padding: 1em;">
 
-    <p>Hey Beach Players!</p>
+        <h3>South Florida, Fall League is Back!</h3>
 
-    <p>Thank you for registering for our final tourney tomorrow. It's shaping up to look like a beautiful day with some clouds, no precipitation, and a welcoming 20 mph wind. 5 teams have signed up for tomorrow!</p>
+        <div>
+            <img class="feat-img" src="https://www.sflultimate.com/images/league-medals-2015-spring.jpg" alt="">
+            <img class="feat-img" src="https://www.sflultimate.com/images/aikeem-the-dream.jpg" alt="">
+            <img class="feat-img" src="https://www.sflultimate.com/images/league-champions-2017-spring.jpg" alt="">
+        </div>
 
-    <p>Should you have any issues or questions feel free to call Daniel Prada (me) at 954-990-9846.</p>
+        <p>We are very excited to announce that ultimate is back at <strong>Amelia Earhart Park</strong> for South Florida Ultimate fall league!</p>
 
-    <p><strong>Locations</strong>: Note we are are <u>Crandon Park</u>, use the pins to get to the right spot.</p>
+        <p>Regular season games will be Wednesday evenings at 8pm, <strong>starting October 6th.</strong></p>
 
-    <ul>
-      <li>Parking: <a href="https://maps.app.goo.gl/EnFWanpPdRNPt96V7" target="_blank">Crandon Parking lot # 3</a></li>
-      <li>Field: <a href="https://maps.app.goo.gl/JVmeHT5vz4ZuB5SV8" target="_blank">Crandon Beach Waterfront</a></li>
-      <li>After Party: <a href="https://goo.gl/maps/mk77eAcXC3BHopsr7" target="_blank">Whiskey Joe's - Miami</a></li>
-    </ul>
+        <p>We're planning on <strong>8 weeks of play on Wednesdays</strong>, skipping the Wednesday of Thanksgiving week and ending on Wednesday, December 1st. Finals are planned for December 12th, and will be at Amelia Earhart Park.</p>
 
-    <p><strong>Schedule</strong>:</p>
-    <table>
-      <thead>
-        <tr>
-          <th>&nbsp;</th>
-          <th>10am</th>
-          <th>11am</th>
-          <th>12pm</th>
-          <th>1pm</th>
-          <th>2pm</th>
-        </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>Field 1</td>
-        <td>Nova vs. Party Wave</td>
-        <td>Corona del Mar vs. Suns of a Beach</td>
-        <td>Nova vs. Corona del Mar</td>
-        <td>Nova vs Suns of a Beach</td>
-        <td>Party Wave vs Corona del Mar</td>
-      </tr>
-      <tr>
-        <td>Field 2</td>
-        <td>Suns of a Beach vs High Manateeance</td>
-        <td>High Manateeance vs. Party Wave</td>
-        <td>Pary Wave vs. Suns of a Beach</td>
-        <td>Corona del Mar vs. High Manateeance</td>
-        <td>Nova vs. High Manateeance</td>
-      </tr>
-      <tr>
-        <td>Bye</td>
-        <td>Corona del Mar</td>
-        <td>Nova</td>
-        <td>High Manateenence</td>
-        <td>Party Wave</td>
-        <td>Suns of a Beach</td>
-      </tr>
-      </tbody>
-    </table>
+        <p>Registration ends <strong>Tuesday, October 5th at midnight EST</strong> and the costs are:</p>
 
-    <p>Here are some quick reminders for our tourney tomorrow:</p>
+        <ul>
+            <li>$30 for students</li>
+            <li>$50 for everyone else</li>
+        </ul>
 
-    <ul>
-      <li><strong>There will be prizes for the winners among others</strong>, exciting!</li>
-      <li>Bring a white and dark jersey.</li>
-      <li>Plan on playing (4) 45 minute games with breaks in between.</li>
-      <li>There will be some sweet merchandise coming in hot, so be sure to check it out before all your friends take them.</li>
-    </ul>
+        <p>Player fees will be put toward fields, lights, insurance, and jerseys for the league.</p>
+        <a target="_blank" class="cta" href="https://www.sflultimate.com/register?utm_source=email&utm_medium=email&utm_campaign=unregistered">Register Now!</a>
 
-    <p>In addition, we highly recommend that you follow us on Instagram for photos & videos of tomorrow's games, as we are excited to play some ultimate.</p>
+        <p><em>You were sent this email because you previously participated in an SFL Ultimate paid event.  If you would not like to receive messages like these in the future, please email sflultimate@gmail.com with subject "Unsubscribe" so that we may remove you from this list.</em></p>
 
-    <p>Thanks,<br/>
-    The SFLUltimate Board</p>
+    </div>
 
-  </div>
-
-  <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
-    <a href="https://www.facebook.com/sflultimate/"><img src="https://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px; padding: 5px;"></a>
-    <a href="https://www.sflultimate.com/"><img src="https://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px;padding: 5px;"></a>
-    <a href="mailto:sflultimate@gmail.com"><img src="https://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px;padding: 5px"></a>
-  </div>
+    <div style="background-color: gray;background-color: #dddddd;text-align: center;padding: 18px;">
+        <a href="https://www.facebook.com/sflultimate/"><img src="https://www.sflultimate.com/images/email-signature/icon-facebook.png" style="max-width: 40px; padding: 5px;"></a>
+        <a href="https://www.sflultimate.com/"><img src="https://www.sflultimate.com/images/email-signature/icon-link.png" style="max-width: 40px;padding: 5px;"></a>
+        <a href="mailto:sflultimate@gmail.com"><img src="https://www.sflultimate.com/images/email-signature/icon-mail.png" style="max-width: 40px;padding: 5px"></a>
+    </div>
 
 </div>
 
 <script>
-
-  var $p = document.getElementsByTagName('p');
-  var $li = document.getElementsByTagName('li');
-  var $td = document.getElementsByTagName('td');
-
   const globalStyles = {
     fontFamily:"-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'",
     fontSize: "18px",
@@ -112,11 +67,39 @@
       border: '1px solid black',
       'border-collapse': 'collapse',
       padding: '10px'
-    }
+    },
+    'h3': {
+      'font-size': '26px',
+      'letter-spacing':'1px',
+      'text-align':'center'
+    },
+    '.cta': {
+      'text-decoration': 'none',
+      'text-align': 'center',
+      'max-width': '300px',
+      'background': 'black',
+      'color': 'white',
+      'padding': '.75em 2em',
+      'text-transform': 'uppercase',
+      'font-weight': 'bold',
+      'border-radius': '5px',
+      'font-size': '18px',
+      'border-bottom': '3px solid #440844',
+      'margin': '0 auto',
+      'display': 'block'
+    },
+    '.feat-img': {
+      'max-height': '300px',
+      height: 'auto',
+      display: 'inline-block',
+      margin: '0 auto',
+    },
+    'p': {},
+    'li': {}
   }
 
   function applyStyles (tag) {
-    var $elem = document.getElementsByTagName(tag)
+    var $elem = document.querySelectorAll(tag)
     for (var i = 0; i < $elem.length; i++) {
       for (var style in globalStyles) {
         $elem[i].style[style] = globalStyles[style];
@@ -129,7 +112,7 @@
     }
   }
 
-  for (const $elem of ['p', 'li','td', 'th', 'table','td']) {
+  for (const $elem of Object.keys(itemStyles)) {
     applyStyles($elem)
   }
 </script>
