Closed general registration

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -19,10 +19,10 @@ block content
         .col-md-6
           h1 Welcome
           p Since 1999, players from Dade & Broward counties unite to grow the awesome sport of Ultimate Frisbee.
-          p Our fall league registration is now open!
+          p Our fall league registration has closed, view teams now to see who is playing!
       .row
         .col-md-12.text-center
-          a.btn.btn-lg.btn-primary(href="/register") Register Now
+          a.btn.btn-lg.btn-primary(href="/teams") View Teams
 
   .features
     .container
